--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-image: url('./assets/images/brooke-lark-Aq2GM7iV71A-unsplash.jpg');
+    background-image: url('/assets/images/brooke-lark-Aq2GM7iV71A-unsplash.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
